--- a/线上蛋糕店/index.html
+++ b/线上蛋糕店/index.html
@@ -19,7 +19,7 @@
 					<li class="active"><a href="index.html">首页</a></li>
 					<li><a href="dangao_list.html">蛋糕列表</a></li>
 					<li><a href="aboutus.html">关于我们</a></li>
-					<li><a href="news.html">新闻资讯</a></li>
+					<li><a href="news.html">相关资讯</a></li>
 					<li><a href="cart.html">购物车</a></li>
 					<li><a href="login.html">登录</a></li>
 				</ul>
